[package]
name = "superbridge-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
solana-client = "1.15.2"
solana-sdk = "1.15.2"
tiny-bip39 = "0.8.2"