[package]
name = "superbridge-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
dotenv = "0.15.0"


serde = { version="1.0.126", features=["derive"] }
hex = "0.4.3"
rand = { version="0.7"} # need 0.7 for eth-keystore to work ok. Might change in future versions ofc.
serde_json = "1.0.96"
solana-client = "1.15.2"
solana-sdk = "1.15.2"
tiny-keccak = "2.0.2"
tokio = "1.27.0"
web3 = "0.18.0"

eth-keystore = "0.2.1"
tiny-bip39 = "0.8.0"
hdpath = { version="=0.6.0", features=["with-bitcoin"] }
secp256k1 = "0.20.3"
bitcoin = "0.26.2"
sha3 = "0.9.1"
eth_checksum = "0.1.2"
